mget by code
